# serve-rs

./: .cspell.json  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.helix/: languages.toml
src/: lib.rs  main.rs  size.rs
