[package]
name = "serve"
version = "0.1.0"
edition = "2021"
authors = ["Heath Stewart (https://github.com/heaths)"]
description = "Serves HTTP requests in simulated conditions"
publish = false

[dependencies]
bytes = "1.10.0"
clap = { version = "4.5.28", features = ["derive"] }
humantime = "2.1.0"
hyper = { version = "1.6.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.10", features = ["http1", "server", "server-graceful", "tokio"] }
tokio = { version = "1.43.0", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "time"] }
